# shopify-ucp-adapter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  simple_app.py  tax_calculation.py  webhook_server.py
shopify_ucp_adapter/: __init__.py  adapter.py  circuit_breaker.py  cli.py  config.py  mock_client.py  rate_limiter.py  router.py  storage.py  telemetry.py  webhook.py
shopify_ucp_adapter/models/: __init__.py  shopify_models.py  ucp_models.py
tests/: test_transform.py
